# Stora

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  fix_all_backend.py  fix_backslash2.py  fix_client_complete.py  fix_complete2.py  fix_large2.py  fix_line382.py  fix_route3.py  fix_signature.py  fix_sync_final2.py  fix_sync_path.py  fix_unified.py  fix_upload2.py  fix_upload3.py  fix_uploads.py  go.mod  go.sum  pyproject.toml  reasonix.toml  requirements.txt  version.ini  version.txt
.reasonix/: desktop-topic-created-at.json  desktop-topic-title-sources.json  desktop-topic-titles.json
alembic_migrations/versions/: 1cf4c5945a49_initial_stora.py  d1cb0194c4cc_fix_date_joined_last_login_to_datetime.py
cli/commands/: upgrade.py
cmd/cli/: backup.go  config.go  config_cmd.go  health.go  init.go  main.go  main_test.go  migrate.go  migrations_embed.go  schema.go  serve.go  upgrade.go  users.go  version.go
cmd/server/: main.go
config/: models.yaml
debug/: 任务规划.md  剩余差距实施方案.md
docs/: collabora-deploy.md  deployment-nginx.md  gap-analysis-v2.md  gap-analysis.md  oauth-setup.md  share-analysis.md  windows-app-guide.md  wopi-collabora.md
frontend-qwik/: package-lock.json  package.json  vite.config.ts
frontend-qwik/patches/: @builder.io+qwik-city+1.20.0.patch
frontend-qwik/src/: global.css
internal/adminui/: adminui.go
internal/middleware/: auth.go  ipwhitelist.go  ratelimit.go  rbac.go  speedlimit.go
migrations/: 001_initial_schema.sql  002_create_file_tables.sql  003_create_performance_indexes.sql  20260622_151246_initial schema from models.yaml.sql  20260622_153140_initial_schema.sql  20260622_161429_fix_nullable.sql  20260622_162610_team_spaces.sql  20260622_162802_file_comments.sql  20260622_165403_webhooks.sql  20260623_073000_share_link_items.sql  20260623_085303_initial_schema.sql  20260623_162453_schema_update.sql  20260624_213456_schema_update.sql  20260624_213911_schema_update.sql  20260624_add_block_storage.sql  20260624_add_version_storage_driver.sql  20260625_add_unique_folder_constraint.sql  20260625_add_upload_sessions.sql  20260625_init.sql
pkg/auth/: auth_test.go  jwt.go  password.go
pkg/cache/: pathcache.go
pkg/config/: config.go
pkg/database/: db.go  redis.go
pkg/models/: file.go  rbac.go  security.go  share.go  system.go  user.go  vault.go
pkg/storage/: local.go  (+1 more)
src/: app.py  setting.py
tests/: conftest.py
(+233 files in other folders)
